master configurable at runtime for spark-kernel notebook

--- a/spark-kernel-notebook/Dockerfile
+++ b/spark-kernel-notebook/Dockerfile
@@ -13,4 +13,6 @@ ADD .ipython /root/.ipython
 add confs /confs
 
 ENV SPARK_OPTS "--properties-file=/confs/default.conf"
+RUN mkdir /notebooks
+WORKDIR /notebooks
 ENTRYPOINT ["ipython", "notebook", "--ip", "0.0.0.0"]
